--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,16 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+body::-webkit-scrollbar{
+  width: 1px;
+  background-color: #0a0a0a;
+}
+
+.container{
+  max-width: 1030px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
 }
